# brazillian_cds_datafeeder_v2

./: .env.bak  .env.example  .gitignore  .pyenv-setup.md  .python-version  DEPLOYMENT.md  ENVIRONMENT.md  GIT_ACTIONS_SECRETS_BESTPRACTICES.md  LOGGING_INSTRUMENTATION.md  MIGRATION.md  README.md  VERCEL_DEPLOYMENT.md  fix_linting.py  main.py  pyproject.toml  pytest.ini  requirements.txt  update_cds_investing.py  vercel.json
.github/workflows/: deploy-vercel.yml  tests.yml  update-cds.yml
alembic/: env.py
alembic/versions/: 2cf317c905fa_initial_tables_for_cds_data.py
data/: .gitkeep  brasil_CDS_historical.csv  brasil_CDS_historical__bkp_20251119_192321.csv
docs/: API_KEY_MANAGEMENT.md  AUTHENTICATION.md  AUTHENTICATION_SUMMARY.md  CODECOV_SETUP.md  DEPLOYMENT.md  DISABLE_VERCEL_AUTO_DEPLOY.md  GITHUB_SECRETS_SETUP.md  LOGGING.md  PERIOD_COMPARISONS.md  SCHEDULING.md  TESTING.md  VERCEL_CI_CD.md  VERCEL_INTEGRATION.md  VERCEL_QUICK_SETUP.md
public/: home.html
scripts/: create_api_keys_table.py  load_initial_data.py  manage_api_keys.py  update_cds_data.py  vercel-ignore-build.sh
src/: config.py  logging_config.py
src/api/: README.md  __init__.py  auth.py  index.py
src/api/models/: __init__.py  cds.py  health.py  home.py
src/api/routes/: __init__.py  cds.py  cron.py  health.py  home.py
src/api/templates/: home.html
src/database/: __init__.py  connection.py  csv_source.py  models.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_auth.py  test_models.py  test_period_comparisons.py
(+3 files in other folders)
