[project]
name = "brazilian-cds-datafeeder"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.121.2",
  "uvicorn[standard]==0.38.0",
  "starlette==0.49.3",
  "pydantic==2.12.4",
  "pydantic-core==2.41.5",
  "pydantic-settings==2.12.0",
  "python-dotenv==1.2.1",
  "h11==0.16.0",
  "httptools==0.7.1",
  "watchfiles==1.1.1",
  "websockets==15.0.1",
  "PyYAML==6.0.3",
  "click==8.3.1",
  "anyio==4.11.0",
  "sniffio==1.3.1",
  "idna==3.11",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "annotated-types==0.7.0",
  "annotated-doc==0.0.4",
  "colorama==0.4.6",
]
